# matchmaking-udesa

./: .gitignore  CLAUDE.md  Makefile  README.md  main.py  matchmaking.ipynb  pyproject.toml  slides.typ  slides_en.typ
bib/: references.bib
docs/plans/: 2026-03-12-matchmaking-notebook-design.md
scripts/: fix_bipartite.py  plot_slides.py
